--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cooking_website</title>
+    <title>Welcome page</title>
 </head>
 <body>
-    <h1>Hello world try only</h1>
+    <h1>Welcome to your digital cooking partner!</h1>
 </body>
 </html>
