changed the color of the button

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         .button-link {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #06101b;
             color: white;
             text-decoration: none;
             border: none;
@@ -22,6 +22,6 @@
 </head>
 <body>
     <h1>Welcome to your digital cooking partner!</h1>
-    <a href="recipes.html" class="button-link">Go to Page 2</a>
+    <a href="recipes.html" class="button-link">Let's start</a>
 </body>
 </html>
