--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to your digital cooking partner!</h1>
+    <h1>Welcome</h1>
     <a href="recipes.html" class="button-link">Let's start</a>
 </body>
 </html>
